fix test and style